--- a/apps/gunna-type-beat/src/app/globals.css
+++ b/apps/gunna-type-beat/src/app/globals.css
@@ -21,3 +21,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.table {
+  width: 1000px;
+}
+
+@media screen and (min-width: 768px) {
+  .table {
+    width: 100%;
+  }
+}
